force-app/main/default/objects/Buddy_Feedback__c/Buddy_Feedback__c.object-meta.xml
<CustomObject>
    <label>Buddy Feedback</label>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Feedback No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buddy Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>