force-app/main/default/objects/Buddy_Feedback__c/fields/Additional_comments_suggestions_for_dev__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_suggestions_for_dev__c</fullName>
    <label>Additional comments/suggestions for dev</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>