force-app/main/default/objects/Buddy_Feedback__c/fields/Buddy_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buddy Assigned</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Buddy Feedbacks</relationshipLabel>
    <relationshipName>Buddy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>