force-app/main/default/objects/Buddy_Feedback__c/fields/Buddy_Name__c.field-meta.xml
<CustomField>
    <fullName>Buddy_Name__c</fullName>
    <label>Buddy Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>