force-app/main/default/objects/Buddy_Feedback__c/fields/Calls_did_they_remain_passive_or_silent__c.field-meta.xml
<CustomField>
    <fullName>Calls_did_they_remain_passive_or_silent__c</fullName>
    <label>Calls did they remain passive or silent</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>