force-app/main/default/objects/Buddy_Feedback__c/fields/Calls_did_they_speak_confidently__c.field-meta.xml
<CustomField>
    <fullName>Calls_did_they_speak_confidently__c</fullName>
    <label>Calls did they speak confidently</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>