force-app/main/default/objects/Buddy_Feedback__c/fields/Comment_on_estimation_logic__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_estimation_logic__c</fullName>
    <label>Comment on estimation logic</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>