force-app/main/default/objects/Buddy_Feedback__c/fields/Date_of_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Evaluation__c</fullName>
    <label>Date of Evaluation</label>
    <type>Date</type>
</CustomField>