force-app/main/default/objects/Buddy_Feedback__c/fields/Describe_Incorrect_Moment__c.field-meta.xml
<CustomField>
    <fullName>Describe_Incorrect_Moment__c</fullName>
    <label>Describe Incorrect Moment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>