force-app/main/default/objects/Buddy_Feedback__c/fields/Developer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Developer_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Assigned</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Buddy Feedbacks (Developer Assigned)</relationshipLabel>
    <relationshipName>Buddy_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>