force-app/main/default/objects/Buddy_Feedback__c/fields/Developer_attended_all_req_call__c.field-meta.xml
<CustomField>
    <fullName>Developer_attended_all_req_call__c</fullName>
    <label>Developer attended all req call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>