force-app/main/default/objects/Buddy_Feedback__c/fields/Developer_raised_risk_blocker_proactive__c.field-meta.xml
<CustomField>
    <fullName>Developer_raised_risk_blocker_proactive__c</fullName>
    <label>Developer raised risk/blocker proactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>