force-app/main/default/objects/Buddy_Feedback__c/fields/Evaluated_Developer__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Developer__c</fullName>
    <label>Evaluated Developer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>