force-app/main/default/objects/Buddy_Feedback__c/fields/Gave_incorrect_uncertain_answer__c.field-meta.xml
<CustomField>
    <fullName>Gave_incorrect_uncertain_answer__c</fullName>
    <label>Gave incorrect/uncertain answer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>