force-app/main/default/objects/Buddy_Feedback__c/fields/Overall_communication_Clarity_Today__c.field-meta.xml
<CustomField>
    <fullName>Overall_communication_Clarity_Today__c</fullName>
    <label>Overall communication Clarity Today</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>