force-app/main/default/objects/Buddy_Feedback__c/fields/Project_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Project_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Assigned</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Buddy Feedbacks</relationshipLabel>
    <relationshipName>Buddy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>