force-app/main/default/objects/Buddy_Feedback__c/fields/Rate_developers_confidence_level__c.field-meta.xml
<CustomField>
    <fullName>Rate_developers_confidence_level__c</fullName>
    <label>Rate developer’s confidence level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>