force-app/main/default/objects/Buddy_Feedback__c/fields/Sharepoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Id__c</fullName>
    <label>Sharepoint Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>