force-app/main/default/objects/Buddy_Feedback__c/fields/Task_estimate_made_today__c.field-meta.xml
<CustomField>
    <fullName>Task_estimate_made_today__c</fullName>
    <label>Task estimate made today</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>