force-app/main/default/objects/Buddy_Feedback__c/fields/There_any_red_flags_today__c.field-meta.xml
<CustomField>
    <fullName>There_any_red_flags_today__c</fullName>
    <label>There any red flags today</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>