force-app/main/default/objects/Buddy_Feedback__c/fields/Was_estimate_realistic__c.field-meta.xml
<CustomField>
    <fullName>Was_estimate_realistic__c</fullName>
    <label>Was estimate realistic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>