force-app/main/default/objects/Buddy_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buddy_Assigned__c</columns>
    <columns>Developer_Assigned__c</columns>
    <columns>Project_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>